Fixed profile email verification visiblity

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -29,6 +29,10 @@ h3 {
   margin-bottom: 0.5rem;
 }
 
+button {
+  cursor: pointer;
+}
+
 .button {
   background-color: var(--color-blue-500);
   color: var(--color-white);
